fix: java21 migration errors/deprecations in tests